# discord-everything

./: README.md  generate_systemd_conf.py  noxfile.py  pyproject.toml
src/: main.py
